# UpdateTrustedLists

./: README.md  TestAzKeyVaultdiciembre2021.pem  decodex509.py  eu_jwk_keys.json  gpk.py  pyproject.toml  raw_eu_tl.jws  requirements.txt  sweden.pem  tt.py  uk_jwk_keys.json  value-sets.json
.github/workflows/: decodex509.yml  updateTrustedLists.yml
