[tool.poetry]
name = "trustlists"
version = "0.1.0"
description = ""
authors = ["Jesus Ruiz"]

[tool.poetry.dependencies]
python = "^3.8"
PyJWT = "^2.1.0"
typer = "^0.3.2"
requests = "^2.26.0"
cryptography = "36.0.0"
devtools = "^0.8.0"
cryptojwt = "^1.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
